--- a/src/style.css
+++ b/src/style.css
@@ -6,33 +6,96 @@
 body{
     width: 100%;
     height: 100%;
-    }
+ }
 
-#inicio { 
-    background: url(file:///home/laboratoria/Descargas/Yellow%20Teal%20Photo%20Graduation%20Events%20Website.png) center fixed; 
-    background-size: cover;
-    }
-
- #agradecimiento{
-     color: #FFFFFF;
-     font-family: 'Fjalla One', sans-serif; 
-     text-align: center;
-     top: 130px;
-     position: relative;
-     left: 42px;
+     #inicio { 
+     background: url(../img/background.png) center fixed; 
+     background-size: cover;
      }
 
- #button1{
-     width: 11%;
-     height: 50%;
-     color: #0bb2b5;
-     text-align: center;
-     border-radius: 20px;
-     top: 30px;
-     position: relative;
-     padding: 7px 40px;
-    
-    
+         #agradecimiento{
+             color: #FFFFFF;
+             font-family: 'Fjalla One', sans-serif; 
+             text-align: center;
+             top: 130px;
+             position: relative;
+             left: 82px;
+         }
 
- }
- 
+         #button1{
+             background: #FFFFFF;
+             width: 11%;
+             height: 50%;
+             color: #0bb2b5;
+             text-align: center;
+             border-radius: 20px;
+             top: 30px;
+             position: relative;
+             padding: 7px 40px;
+         }
+         #logo1{
+            height: 60px;
+            width: 60px;
+            border-radius: 50%;
+            border: solid 3px #FFFFFF;
+            right: 10px;
+            top: 10px;
+            position: absolute;
+         }
+
+     #paginaValidar {
+     background: url(../img/background2.png) center fixed; 
+     background-size: cover;
+     }
+
+         #tdc{
+             font-family: 'Fjalla One', sans-serif; 
+             width: 690px;
+             height: 740px;
+             margin: 0 auto;
+             margin-top: 100px;
+             margin-left: 280px;
+             border-radius: 28px;
+             background-color:#fee67d;
+             border: 4px #F2D0A4;
+             box-shadow: 5px 10px 2px #92B082;
+             text-align: center;
+         }   
+         #logo2{
+            height: 60px;
+            width: 60px;
+            border-radius: 50%;
+            border: solid 3px #FFFFFF;
+            right: 10px;
+            top: 10px;
+            position: absolute;
+         }
+
+     #validacionExitosa{
+     background: url(../img/background4.png) center fixed;
+     background-size: cover;
+     }
+
+         #exito{
+             color: #FFFFFF;
+             font-family: 'Fjalla One', sans-serif; 
+             text-align: center;
+             width: 690px;
+             height: 380px;
+             margin: 0 auto;
+             margin-top: 80px;
+             margin-left: 310px;
+             border-radius: 28px;
+             background-color:#fee67d;
+             border: 4px #F2D0A4;
+             box-shadow: 5px 10px 2px #92B082;
+         }
+         #logo3{
+             height: 60px;
+             width: 60px;
+             border-radius: 50%;
+             border: solid 3px #FFFFFF;
+             right: 10px;
+             top: 10px;
+             position: absolute;
+         }
